--- a/index.html
+++ b/index.html
@@ -60,21 +60,20 @@
 
     <section id="home">
         <div class="content-home">
-            <div class="title-outline">
-                <h1>PORTFOLIO</h1>
+            <div class="title">
+                <h1 class="title-filled">PORTFOLIO</h1>
+                <h1 class="title-outline">PORTFOLIO</h1>
+                <div id="job">UX/UI DESIGNER</div>
             </div>
             <div id="planet">
                 <img src="assets/img/planet.png" alt="" draggable="false">
             </div>
-            <div class="title-filled">
-                <h1>PORTFOLIO</h1>
-            </div>
-            <div id="job">UX/UI DESIGNER</div>
-            <div class="scroll-indicator">
-                <div class="dots"></div>
-            </div>
+        </div>
+        <div class="scroll-indicator">
+            <div class="dots"></div>
         </div>
     </section>
+    <section id="projets"></section>
 </body>
 
 </html>
