accueil fini + bug incompréhensible flex column safari
num-line n'est pas bien placé sur safari mais ça se replace bien quand on inspecte l'élément et qu'on coche et décoche le flex-direction... JE CAPTE RIEN !!!

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yohan Guyot | UX/UI Designer</title>
+    <title>YOHAN GUYOT | PORTFOLIO</title>
     <link rel="shortcut icon" href="assets/img/favicon.ico">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -15,35 +15,29 @@
 
 <body>
     <header>
-        <div id="logo">
-            YOHAN
-            <br>
-            GUYOT
-        </div>
+        <div id="logo" class="noise">YOHAN<br>GUYOT</div>
         <nav>
             <ul>
                 <li>
-                    <a href="about.html">À PROPOS</a>
+                    <a href="about.html" class="noise">À PROPOS</a>
                 </li>
                 <li>
-                    <a href="mailto:yohanguyot@hotmail.com">CONTACT</a>
+                    <a href="mailto:yohanguyot@hotmail.com" class="noise">CONTACT</a>
                 </li>
             </ul>
         </nav>
 
         <div id="language">
             <div class="fr">
-                <a href="#">FR</a>
+                <a href="index.html" class="noise">FR</a>
             </div>
             <div class="en">
-                <a href="#">EN</a>
+                <a href="#" class="noise">EN</a>
             </div>
         </div>
 
         <div class="header-right">
-            <div class="copyright">
-                ©YOHANGUYOT
-            </div>
+            <div class="copyright">©YOHANGUYOT</div>
             <div id="social">
                 <a href="https://www.behance.net/yohanguyot" target="_blank" id="behance">
                     <img src="assets/img/behance.svg" alt="behance" draggable="false">
@@ -61,7 +55,7 @@
     <section id="home">
         <div class="content-home">
             <div class="title">
-                <h1 class="title-filled">PORTFOLIO</h1>
+                <h1 class="title-filled noise">PORTFOLIO</h1>
                 <h1 class="title-outline">PORTFOLIO</h1>
                 <div id="job">UX/UI DESIGNER</div>
             </div>
@@ -73,7 +67,239 @@
             <div class="dots"></div>
         </div>
     </section>
-    <section id="projets"></section>
+    <section id="projects">
+        <div class="project-left">
+            <div class="project-visual">
+                <div class="type noise">WEB</div>
+                <div class="num-line">
+                    <div class="vert-line"></div>
+                    <div class="num noise">1/9</div>
+                </div>
+                <a href="#" class="project-img">
+                    <img src="assets/img/slyde/slyde-cover.jpg" alt="" id="slyde" draggable="false"
+                        onselectstart="return false">
+                </a>
+            </div>
+            <div class="project-title">
+                <div class="project-title-filled">
+                    <a href="#">
+                        <h2 class="noise">SLYDE</h2>
+                    </a>
+                </div>
+                <div class="project-title-outline">
+                    <a href="#">
+                        <h2 class="slyde slyde-title">SLYDE</h2>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="project-right">
+            <div class="project-title">
+                <div class="project-title-filled-right">
+                    <a href="#">
+                        <h2 class="noise">MAUVAISE<br>RENCONTRE</h2>
+                    </a>
+                </div>
+                <div class="project-title-outline-right">
+                    <a href="#">
+                        <h2 class="mauvaise-rencontre-title">MAUVAISE<br>RENCONTRE</h2>
+                    </a>
+                </div>
+            </div>
+            <div class="project-visual">
+                <div class="type-right noise">MOTION DESIGN</div>
+                <div class="num-line-right">
+                    <div class="vert-line"></div>
+                    <div class="num-right noise">2/9</div>
+                </div>
+                <a href="#" class="project-img-right">
+                    <img src="assets/img/mauvaise-rencontre/mauvaise-rencontre-cover.jpg" alt="" id="mauvaise-rencontre"
+                        draggable="false">
+                </a>
+            </div>
+        </div>
+
+        <div class="project-left">
+            <div class="project-visual">
+                <div class="type noise">AFFICHE</div>
+                <div class="num-line">
+                    <div class="vert-line"></div>
+                    <div class="num noise">3/9</div>
+                </div>
+                <a href="#" class="project-img">
+                    <img src="assets/img/jpo-2021/jpo-2021-cover.jpg" alt="" id="jpo-2021" draggable="false">
+                </a>
+            </div>
+            <div class="project-title">
+                <div class="project-title-filled">
+                    <a href="#">
+                        <h2 class="noise">JPO 2021</h2>
+                    </a>
+                </div>
+                <div class="project-title-outline">
+                    <a href="#">
+                        <h2 class="jpo-2021-title">JPO 2021</h2>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="project-right">
+            <div class="project-title">
+                <div class="project-title-filled-right">
+                    <a href="#">
+                        <h2 class="noise">CV VIDÉO</h2>
+                    </a>
+                </div>
+                <div class="project-title-outline-right">
+                    <a href="#">
+                        <h2 class="cv-video-title">CV VIDÉO</h2>
+                    </a>
+                </div>
+            </div>
+            <div class="project-visual">
+                <div class="type-right noise">AUDIOVISUEL</div>
+                <div class="num-line-right">
+                    <div class="vert-line"></div>
+                    <div class="num-right noise">4/9</div>
+                </div>
+                <a href="#" class="project-img-right darker">
+                    <img src="assets/img/cv-video/cv-video-cover.jpg" alt="" id="cv-video" draggable="false">
+                </a>
+            </div>
+        </div>
+
+        <div class="project-left">
+            <div class="project-visual">
+                <div class="type noise">WEB</div>
+                <div class="num-line">
+                    <div class="vert-line"></div>
+                    <div class="num noise">5/9</div>
+                </div>
+                <a href="#" class="project-img">
+                    <img src="assets/img/mmi-town/mmi-town-cover.jpg" alt="" id="mmi-town" draggable="false">
+                </a>
+            </div>
+            <div class="project-title">
+                <div class="project-title-filled">
+                    <a href="#">
+                        <h2 class="noise">MMI TOWN</h2>
+                    </a>
+                </div>
+                <div class="project-title-outline">
+                    <a href="#">
+                        <h2 class="mmi-town-title">MMI TOWN</h2>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="project-right">
+            <div class="project-title">
+                <div class="project-title-filled-right">
+                    <a href="#">
+                        <h2 class="noise">CV<br>NUMÉRIQUE</h2>
+                    </a>
+                </div>
+                <div class="project-title-outline-right">
+                    <a href="#">
+                        <h2 class="cv-numerique-title">CV<br>NUMÉRIQUE</h2>
+                    </a>
+                </div>
+            </div>
+            <div class="project-visual">
+                <div class="type-right noise">WEB</div>
+                <div class="num-line-right">
+                    <div class="vert-line"></div>
+                    <div class="num-right noise">6/9</div>
+                </div>
+                <a href="#" class="project-img-right darker">
+                    <img src="assets/img/cv-numerique/cv-numerique-cover.jpg" alt="" id="cv-numerique"
+                        draggable="false">
+                </a>
+            </div>
+        </div>
+
+        <div class="project-left">
+            <div class="project-visual">
+                <div class="type noise">MOCK-UP</div>
+                <div class="num-line">
+                    <div class="vert-line"></div>
+                    <div class="num noise">7/9</div>
+                </div>
+                <a href="#" class="project-img">
+                    <img src="assets/img/redesign-netlix/redesign-netflix-cover.jpg" alt="" id="redesign-netflix"
+                        draggable="false">
+                </a>
+            </div>
+            <div class="project-title">
+                <div class="project-title-filled">
+                    <a href="#">
+                        <h2 class="noise">REDESIGN<br>NETFLIX</h2>
+                    </a>
+                </div>
+                <div class="project-title-outline">
+                    <a href="#">
+                        <h2 class="redesign-netflix-title">REDESIGN<br>NETFLIX</h2>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="project-right">
+            <div class="project-title">
+                <div class="project-title-filled-right">
+                    <a href="#">
+                        <h2 class="noise">PORTRAIT<br>CHINOIS</h2>
+                    </a>
+                </div>
+                <div class="project-title-outline-right">
+                    <a href="#">
+                        <h2 class="portrait-chinois-title">PORTRAIT<br>CHINOIS</h2>
+                    </a>
+                </div>
+            </div>
+            <div class="project-visual">
+                <div class="type-right noise">WEB</div>
+                <div class="num-line-right">
+                    <div class="vert-line"></div>
+                    <div class="num-right noise">8/9</div>
+                </div>
+                <a href="#" class="project-img-right">
+                    <img src="assets/img/portrait-chinois/portrait-chinois-cover.jpg" alt="" id="portrait-chinois"
+                        draggable="false">
+                </a>
+            </div>
+        </div>
+
+        <div class="project-left">
+            <div class="project-visual">
+                <div class="type noise">AFFICHE</div>
+                <div class="num-line">
+                    <div class="vert-line"></div>
+                    <div class="num noise">9/9</div>
+                </div>
+                <a href="#" class="project-img">
+                    <img src="assets/img/jpo-2020/jpo-2020-cover.jpg" alt="" id="jpo-2020" draggable="false">
+                </a>
+            </div>
+            <div class="project-title">
+                <div class="project-title-filled">
+                    <a href="#">
+                        <h2 class="noise">JPO 2020</h2>
+                    </a>
+                </div>
+                <div class="project-title-outline">
+                    <a href="#">
+                        <h2 class="jpo-2020-title">JPO 2020</h2>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="assets/js/project-hover.js"></script>
 </body>
 
 </html>
