accueil fini, il manque que les animations

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,700;0,800;1,300&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/ugb2gcr.css">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/img/apple-touch-icon-120x120-precomposed.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/img/apple-touch-icon-152x152-precomposed.png">
 </head>
 
 <body>
@@ -76,14 +78,14 @@
                     <div class="num noise">1/9</div>
                 </div>
                 <a href="#" class="project-img">
-                    <img src="assets/img/slyde/slyde-cover.jpg" alt="" id="slyde" draggable="false"
+                    <img src="assets/img/slyde/slyde-cover.jpg" alt="" id="slyde-img" class="slyde" draggable="false"
                         onselectstart="return false">
                 </a>
             </div>
             <div class="project-title">
                 <div class="project-title-filled">
                     <a href="#">
-                        <h2 class="noise">SLYDE</h2>
+                        <h2 class="noise slyde-title">SLYDE</h2>
                     </a>
                 </div>
                 <div class="project-title-outline">
@@ -95,18 +97,6 @@
         </div>
 
         <div class="project-right">
-            <div class="project-title">
-                <div class="project-title-filled-right">
-                    <a href="#">
-                        <h2 class="noise">MAUVAISE<br>RENCONTRE</h2>
-                    </a>
-                </div>
-                <div class="project-title-outline-right">
-                    <a href="#">
-                        <h2 class="mauvaise-rencontre-title">MAUVAISE<br>RENCONTRE</h2>
-                    </a>
-                </div>
-            </div>
             <div class="project-visual">
                 <div class="type-right noise">MOTION DESIGN</div>
                 <div class="num-line-right">
@@ -114,9 +104,21 @@
                     <div class="num-right noise">2/9</div>
                 </div>
                 <a href="#" class="project-img-right">
-                    <img src="assets/img/mauvaise-rencontre/mauvaise-rencontre-cover.jpg" alt="" id="mauvaise-rencontre"
-                        draggable="false">
+                    <img src="assets/img/mauvaise-rencontre/mauvaise-rencontre-cover.jpg" alt=""
+                        id="mauvaise-rencontre-img" class="mauvaise-rencontre" draggable=" false">
                 </a>
+            </div>
+            <div class="project-title">
+                <div class="project-title-filled-right">
+                    <a href="#">
+                        <h2 class="noise mauvaise-rencontre-title">MAUVAISE<br>RENCONTRE</h2>
+                    </a>
+                </div>
+                <div class="project-title-outline-right">
+                    <a href="#">
+                        <h2 class="mauvaise-rencontre mauvaise-rencontre-title">MAUVAISE<br>RENCONTRE</h2>
+                    </a>
+                </div>
             </div>
         </div>
 
@@ -128,36 +130,25 @@
                     <div class="num noise">3/9</div>
                 </div>
                 <a href="#" class="project-img">
-                    <img src="assets/img/jpo-2021/jpo-2021-cover.jpg" alt="" id="jpo-2021" draggable="false">
+                    <img src="assets/img/jpo-2021/jpo-2021-cover.jpg" alt="" id="jpo-2021-img" class="jpo-2021"
+                        draggable="false">
                 </a>
             </div>
             <div class="project-title">
                 <div class="project-title-filled">
                     <a href="#">
-                        <h2 class="noise">JPO 2021</h2>
+                        <h2 class="noise jpo-2021-title">JPO 2021</h2>
                     </a>
                 </div>
                 <div class="project-title-outline">
                     <a href="#">
-                        <h2 class="jpo-2021-title">JPO 2021</h2>
+                        <h2 class="jpo-2021 jpo-2021-title">JPO 2021</h2>
                     </a>
                 </div>
             </div>
         </div>
 
         <div class="project-right">
-            <div class="project-title">
-                <div class="project-title-filled-right">
-                    <a href="#">
-                        <h2 class="noise">CV VIDÉO</h2>
-                    </a>
-                </div>
-                <div class="project-title-outline-right">
-                    <a href="#">
-                        <h2 class="cv-video-title">CV VIDÉO</h2>
-                    </a>
-                </div>
-            </div>
             <div class="project-visual">
                 <div class="type-right noise">AUDIOVISUEL</div>
                 <div class="num-line-right">
@@ -165,8 +156,21 @@
                     <div class="num-right noise">4/9</div>
                 </div>
                 <a href="#" class="project-img-right darker">
-                    <img src="assets/img/cv-video/cv-video-cover.jpg" alt="" id="cv-video" draggable="false">
+                    <img src="assets/img/cv-video/cv-video-cover.jpg" alt="" id="cv-video-img" class="cv-video"
+                        draggable="false">
                 </a>
+            </div>
+            <div class="project-title">
+                <div class="project-title-filled-right">
+                    <a href="#">
+                        <h2 class="noise cv-video-title">CV VIDÉO</h2>
+                    </a>
+                </div>
+                <div class="project-title-outline-right">
+                    <a href="#">
+                        <h2 class="cv-video cv-video-title">CV VIDÉO</h2>
+                    </a>
+                </div>
             </div>
         </div>
 
@@ -178,36 +182,25 @@
                     <div class="num noise">5/9</div>
                 </div>
                 <a href="#" class="project-img">
-                    <img src="assets/img/mmi-town/mmi-town-cover.jpg" alt="" id="mmi-town" draggable="false">
+                    <img src="assets/img/mmi-town/mmi-town-cover.jpg" alt="" id="mmi-town-img" class="mmi-town"
+                        draggable="false">
                 </a>
             </div>
             <div class="project-title">
                 <div class="project-title-filled">
                     <a href="#">
-                        <h2 class="noise">MMI TOWN</h2>
+                        <h2 class="noise mmi-town-title">MMI TOWN</h2>
                     </a>
                 </div>
                 <div class="project-title-outline">
                     <a href="#">
-                        <h2 class="mmi-town-title">MMI TOWN</h2>
+                        <h2 class="mmi-town mmi-town-title">MMI TOWN</h2>
                     </a>
                 </div>
             </div>
         </div>
 
         <div class="project-right">
-            <div class="project-title">
-                <div class="project-title-filled-right">
-                    <a href="#">
-                        <h2 class="noise">CV<br>NUMÉRIQUE</h2>
-                    </a>
-                </div>
-                <div class="project-title-outline-right">
-                    <a href="#">
-                        <h2 class="cv-numerique-title">CV<br>NUMÉRIQUE</h2>
-                    </a>
-                </div>
-            </div>
             <div class="project-visual">
                 <div class="type-right noise">WEB</div>
                 <div class="num-line-right">
@@ -215,9 +208,21 @@
                     <div class="num-right noise">6/9</div>
                 </div>
                 <a href="#" class="project-img-right darker">
-                    <img src="assets/img/cv-numerique/cv-numerique-cover.jpg" alt="" id="cv-numerique"
-                        draggable="false">
+                    <img src="assets/img/cv-numerique/cv-numerique-cover.jpg" alt="" id="cv-numerique-img"
+                        class="cv-numerique" draggable="false">
                 </a>
+            </div>
+            <div class="project-title">
+                <div class="project-title-filled-right">
+                    <a href="#">
+                        <h2 class="noise cv-numerique-title">CV<br>NUMÉRIQUE</h2>
+                    </a>
+                </div>
+                <div class="project-title-outline-right">
+                    <a href="#">
+                        <h2 class="cv-numerique cv-numerique-title">CV<br>NUMÉRIQUE</h2>
+                    </a>
+                </div>
             </div>
         </div>
 
@@ -229,37 +234,25 @@
                     <div class="num noise">7/9</div>
                 </div>
                 <a href="#" class="project-img">
-                    <img src="assets/img/redesign-netlix/redesign-netflix-cover.jpg" alt="" id="redesign-netflix"
-                        draggable="false">
+                    <img src="assets/img/redesign-netlix/redesign-netflix-cover.jpg" alt="" id="redesign-netflix-img"
+                        class="redesign-netflix " draggable="false">
                 </a>
             </div>
             <div class="project-title">
                 <div class="project-title-filled">
                     <a href="#">
-                        <h2 class="noise">REDESIGN<br>NETFLIX</h2>
+                        <h2 class="noise redesign-netflix-title">REDESIGN<br>NETFLIX</h2>
                     </a>
                 </div>
                 <div class="project-title-outline">
                     <a href="#">
-                        <h2 class="redesign-netflix-title">REDESIGN<br>NETFLIX</h2>
+                        <h2 class="redesign-netflix redesign-netflix-title">REDESIGN<br>NETFLIX</h2>
                     </a>
                 </div>
             </div>
         </div>
 
         <div class="project-right">
-            <div class="project-title">
-                <div class="project-title-filled-right">
-                    <a href="#">
-                        <h2 class="noise">PORTRAIT<br>CHINOIS</h2>
-                    </a>
-                </div>
-                <div class="project-title-outline-right">
-                    <a href="#">
-                        <h2 class="portrait-chinois-title">PORTRAIT<br>CHINOIS</h2>
-                    </a>
-                </div>
-            </div>
             <div class="project-visual">
                 <div class="type-right noise">WEB</div>
                 <div class="num-line-right">
@@ -267,9 +260,21 @@
                     <div class="num-right noise">8/9</div>
                 </div>
                 <a href="#" class="project-img-right">
-                    <img src="assets/img/portrait-chinois/portrait-chinois-cover.jpg" alt="" id="portrait-chinois"
-                        draggable="false">
+                    <img src="assets/img/portrait-chinois/portrait-chinois-cover.jpg" alt="" id="portrait-chinois-img"
+                        class="portrait-chinois " draggable="false">
                 </a>
+            </div>
+            <div class="project-title">
+                <div class="project-title-filled-right">
+                    <a href="#">
+                        <h2 class="noise portrait-chinois-title">PORTRAIT<br>CHINOIS</h2>
+                    </a>
+                </div>
+                <div class="project-title-outline-right">
+                    <a href="#">
+                        <h2 class="portrait-chinois portrait-chinois-title">PORTRAIT<br>CHINOIS</h2>
+                    </a>
+                </div>
             </div>
         </div>
 
@@ -281,18 +286,19 @@
                     <div class="num noise">9/9</div>
                 </div>
                 <a href="#" class="project-img">
-                    <img src="assets/img/jpo-2020/jpo-2020-cover.jpg" alt="" id="jpo-2020" draggable="false">
+                    <img src="assets/img/jpo-2020/jpo-2020-cover.jpg" alt="" id="jpo-2020-img" class="jpo-2020"
+                        draggable="false">
                 </a>
             </div>
             <div class="project-title">
                 <div class="project-title-filled">
                     <a href="#">
-                        <h2 class="noise">JPO 2020</h2>
+                        <h2 class="noise jpo-2020-title">JPO 2020</h2>
                     </a>
                 </div>
                 <div class="project-title-outline">
                     <a href="#">
-                        <h2 class="jpo-2020-title">JPO 2020</h2>
+                        <h2 class="jpo-2020 jpo-2020-title">JPO 2020</h2>
                     </a>
                 </div>
             </div>
